Jan 14 sample code submission update

--- a/02_activities/assignments/participation/Jan15_Day1.ipynb
+++ b/02_activities/assignments/participation/Jan15_Day1.ipynb
@@ -679,12 +679,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "aaee575f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Recall the aesthetic,substantive, and perceptual qualities of datavisualizations. Does your visualization of choice succeed in each area?\n",
+    "https://www.youtube.com/watch?v=7U5WcFE4o5w\n",
+    "\n",
+    "Aesthetically, this lollipop chart is simple and attractive to view. However, substantively it does not highlight any meaningful data category comparisions. In contrast, a histogram would be better since it would produce meaningful binning of the y values by frequency. Rather, it only show the apparent variation among the randomly-generated data points. Perceptually, a lollipop chart presentation of this data set is overwhleming and does serve to provide any meaningful distinctions in the data set. \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
