Assignment 1 Day 1 updates

--- a/02_activities/assignments/participation/Jan15_Day1.ipynb
+++ b/02_activities/assignments/participation/Jan15_Day1.ipynb
@@ -689,6 +689,31 @@
     "Aesthetically, this lollipop chart is simple and attractive to view. However, substantively it does not highlight any meaningful data category comparisions. In contrast, a histogram would be better since it would produce meaningful binning of the y values by frequency. Rather, it only show the apparent variation among the randomly-generated data points. Perceptually, a lollipop chart presentation of this data set is overwhleming and does serve to provide any meaningful distinctions in the data set. \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a288cc3",
+   "metadata": {},
+   "source": [
+    "Use headings and subheadings, especially when learning new coding packages, to describe what steps are being used to generate a data viz. For example: \n",
+    "# Make a basic scatterplot\n",
+    "# Use a matplotlib.pyplot function called plt.subplots; pyplot is mainly intended for interactive plots\n",
+    "\n",
+    "# Specify the width and height of the subplot (axes). It creates two objects: 1. the figure objects (i.e., the entire canvas), and 2. the axes (the plotting area where we draw). \n",
+    "# This is how matplotlib encodes the figure. \n",
+    "fig, ax = plt.subplots(figsize=(5, 3))\n",
+    "\n",
+    "Use code snippets to detail what particular lines of code do. For example: \n",
+    "# Insert y axis grid line\n",
+    "ax.grid(axis='y', color = \"blue\", linewidth = 2, linestyle = '-.')\n",
+    "ax.plot(x,y,marker='*', \n",
+    "        markersize = 12, # NEW ADDITIONS\n",
+    "        #color = '#7425b9', \n",
+    "        linestyle = '--', \n",
+    "        linewidth = 2, \n",
+    "        markeredgecolor = '#fa9359', # NEW ADDITIONS \n",
+    "        markerfacecolor = '#000000' ) # NEW ADDITIONS\n"
+   ]
   }
  ],
  "metadata": {
