Update to Day 5 notebook

--- a/02_activities/assignments/participation/Jan29_Day5.ipynb
+++ b/02_activities/assignments/participation/Jan29_Day5.ipynb
@@ -301,8 +301,131 @@
    "source": [
     "# Make the plot\n",
     "\n",
+    "# Update the layout to include titles\n",
+    "graph.update_layout(\n",
+    "    title=\"Pirate Scores\",\n",
+    "    xaxis_title=\"Pirates\",\n",
+    "    yaxis_title=\"Score\")\n",
+    "graph.show() # Show the plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b446ca83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export plotly graphs: save as HTML files and embed in a webpage\n",
+    "graph.write_html(\"../../folders/pirategraph.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "625e8d56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Customize plotly graphs\n",
+    "graph = go.Figure()\n",
     "\n",
-    "\n"
+    "graph.add_trace(go.Scatter(x=x1, y=y1, mode='markers', # we want points for a scatter plot\n",
+    "    marker=dict(\n",
+    "        size=15, # point size\n",
+    "        color='hotpink', # point colour\n",
+    "        opacity=1, # point transparency/alpha\n",
+    "        line=dict(width=5, color='purple') # point outline\n",
+    "    )))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4206673",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotly graph layout\n",
+    "graph.update_layout(\n",
+    "    title='Interactive Pirate Plot',\n",
+    "    xaxis_title='Pirates',\n",
+    "    yaxis_title='Scores',\n",
+    "    width=500, height=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cca94142",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wordclouds\n",
+    "\n",
+    "# Import wordcloud package\n",
+    "from wordcloud import WordCloud\n",
+    "# Load the sample dataset\n",
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/prasertcbs/basic-dataset/master/movie_quotes.csv\",\n",
+    "on_bad_lines='skip')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c371523",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make a simple wordcloud with the movie 'quote' variable\n",
+    "\n",
+    "# join all our text from each row from our quote column into a string\n",
+    "text = \" \".join(each for each in df.quote)\n",
+    "\n",
+    "# generate our wordcloud image\n",
+    "wordcloud = WordCloud(background_color=\"white\",\n",
+    "colormap = 'inferno').generate(text)\n",
+    "\n",
+    "# use matplotlib syntax to put our image in a figure\n",
+    "fig, ax = plt.subplots(figsize=(7, 3))\n",
+    "ax.imshow(wordcloud, # remember 'imshow' from when we added pictures to our matplotlib axes\n",
+    "interpolation='bilinear') # this line helps smooth our image\n",
+    "ax.axis(\"off\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d63cd405",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Making venn diagrams using the matplotlib_venn extension\n",
+    "\n",
+    "# Import package\n",
+    "from matplotlib_venn import venn2, venn2_circles, venn2_unweighted\n",
+    "\n",
+    "# Define the venn sets\n",
+    "A = set([\"apple\", \"banana\", \"watermelon\"])\n",
+    "B = set([\"pumpkin\", \"blueberry\", \"apple\", \"key lime\"])\n",
+    "\n",
+    "# Diagram the sets by assigning the sets to their reppective circles & modify the diagram appearance\n",
+    "diagram = venn2_unweighted([A, B],\n",
+    "                            set_labels = ('Fruits', 'Pies'),\n",
+    "                            set_colors=(\"blue\", \"red\"),\n",
+    "                            alpha=0.5)\n",
+    "plt.show()\n",
+    "\n",
+    "# Lable the venn diagram sets\n",
+    "diagram.get_label_by_id(\"10\")\n",
+    "    .set_text(\"n\".join(A - B))\n",
+    "\n",
+    "diagram.get_label_by_id(\"11\")\n",
+    "    .set_text(\"n\".join(A & B))\n",
+    "\n",
+    "diagram.get_label_by_id(\"01\")\n",
+    "    .set_text(\"n\".join(B - A))"
    ]
   }
  ],
